# RAQR

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: Architecture.md  Corpus Creation Strategy.md  Design Decision.md  Executive Summary.md  Experiment Design.md  Model Design.md  Project Structure.md  Wikipedia Cleaning Pipeline.md  datasets.md
prompts/: discovery.txt  generator.txt  onepass_extraction.txt  query_entity_extraction.txt  triple_extractor.txt  validation.txt
scripts/: 00_setup_models.py  01_build_corpus.py  01_ingest_data.py  04a_train_classifier.py  04b_validate_classifier.py  evaluate_strategies.py
scripts/corpus/: build_graph_from_corpus.py  build_wiki_title_seed.py  collect_llm_ie_batch.py  collect_llm_triple_batch.py  collect_llm_triple_batch_stage1.py  run_llm_ie_batch.py  (+6 more)
tests/: _graph_test_utils.py  test_alias_map.py  test_answer_prefix.py  test_batch_oracle_completion.py  test_corpus_pipeline.py  test_dataset_builder_minimal.py  test_dense_probe.py  test_dense_strategy.py  test_enrich_entities.py  test_enrich_relations.py  test_entity_alias_resolver.py  test_evaluation_metrics.py  test_graph_grounding.py  test_graph_ingestion_fixture.py  test_graph_paths.py  test_graph_scoring.py  test_graph_strategy.py  test_graph_strategy_regressions.py  test_llm_judge.py  test_llm_onepass.py  test_llm_relations.py  test_loaders.py  test_metrics_max.py  test_oracle_label.py  test_probe.py  test_qfeat.py  test_router_classifier.py  test_router_dataset.py  test_signal_config.py  test_strategy_disagreement.py  test_temporal_strategy.py
(+104 files in other folders)
