[project]
name = "raqr"
version = "0.1.0"
description = "Reasoning-Aware Query Routing (RAQR): Dynamic Retrieval Selection for Mixed-Reasoning QA"
authors = [
    {name = "LiamDemb",email = "dembliam@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.0,<5.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "spacy (>=3.8.0,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=4.57.6,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "datasets (>=4.5.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
